src/test/resources/rules/success/UnusedImport.java
package rules.success;

public class UnusedImport {
    public void print() {
        System.out.println("Hello");
    }
}
